YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'@'", "'.'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<-'", "'=>'", "'+'", "'-'", "'*'", "'/'", "'<'", 
                     "'<='", "'='", "'~'", "'(*'", "'*)'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "CLASS", "ELSE", "FALSE", 
                      "FI", "IF", "IN", "INHERITS", "ISVOID", "LET", "LOOP", 
                      "POOL", "THEN", "WHILE", "CASE", "ESAC", "NEW", "OF", 
                      "NOT", "TRUE", "STRING", "INT", "TYPEID", "OBJECTID", 
                      "ASSIGNMENT", "CASE_ARROW", "ADD", "MINUS", "MULTIPLY", 
                      "DIVISION", "LESS_THAN", "LESS_EQUAL", "EQUAL", "INTEGER_NEGATIVE", 
                      "OPEN_COMMENT", "CLOSE_COMMENT", "COMMENT", "ONE_LINE_COMMENT", 
                      "WHITESPACE" ]

    RULE_program = 0
    RULE_programBlocks = 1
    RULE_classDefine = 2
    RULE_feature = 3
    RULE_decla = 4
    RULE_formal = 5
    RULE_expression = 6

    ruleNames =  [ "program", "programBlocks", "classDefine", "feature", 
                   "decla", "formal", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    CLASS=10
    ELSE=11
    FALSE=12
    FI=13
    IF=14
    IN=15
    INHERITS=16
    ISVOID=17
    LET=18
    LOOP=19
    POOL=20
    THEN=21
    WHILE=22
    CASE=23
    ESAC=24
    NEW=25
    OF=26
    NOT=27
    TRUE=28
    STRING=29
    INT=30
    TYPEID=31
    OBJECTID=32
    ASSIGNMENT=33
    CASE_ARROW=34
    ADD=35
    MINUS=36
    MULTIPLY=37
    DIVISION=38
    LESS_THAN=39
    LESS_EQUAL=40
    EQUAL=41
    INTEGER_NEGATIVE=42
    OPEN_COMMENT=43
    CLOSE_COMMENT=44
    COMMENT=45
    ONE_LINE_COMMENT=46
    WHITESPACE=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programBlocks(self):
            return self.getTypedRuleContext(YAPLParser.ProgramBlocksContext,0)


        def EOF(self):
            return self.getToken(YAPLParser.EOF, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.programBlocks()
            self.state = 15
            self.match(YAPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramBlocksContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_programBlocks

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ClassesContext(ProgramBlocksContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ProgramBlocksContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classDefine(self):
            return self.getTypedRuleContext(YAPLParser.ClassDefineContext,0)

        def programBlocks(self):
            return self.getTypedRuleContext(YAPLParser.ProgramBlocksContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClasses" ):
                listener.enterClasses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClasses" ):
                listener.exitClasses(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClasses" ):
                return visitor.visitClasses(self)
            else:
                return visitor.visitChildren(self)


    class EofContext(ProgramBlocksContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ProgramBlocksContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(YAPLParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEof" ):
                listener.enterEof(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEof" ):
                listener.exitEof(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEof" ):
                return visitor.visitEof(self)
            else:
                return visitor.visitChildren(self)



    def programBlocks(self):

        localctx = YAPLParser.ProgramBlocksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programBlocks)
        try:
            self.state = 22
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [YAPLParser.CLASS]:
                localctx = YAPLParser.ClassesContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 17
                self.classDefine()
                self.state = 18
                self.match(YAPLParser.T__0)
                self.state = 19
                self.programBlocks()
                pass
            elif token in [YAPLParser.EOF]:
                localctx = YAPLParser.EofContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 21
                self.match(YAPLParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)

        def TYPEID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPEID)
            else:
                return self.getToken(YAPLParser.TYPEID, i)

        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_classDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefine" ):
                listener.enterClassDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefine" ):
                listener.exitClassDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDefine" ):
                return visitor.visitClassDefine(self)
            else:
                return visitor.visitChildren(self)




    def classDefine(self):

        localctx = YAPLParser.ClassDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDefine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(YAPLParser.CLASS)
            self.state = 25
            self.match(YAPLParser.TYPEID)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YAPLParser.INHERITS:
                self.state = 26
                self.match(YAPLParser.INHERITS)
                self.state = 27
                self.match(YAPLParser.TYPEID)


            self.state = 30
            self.match(YAPLParser.T__1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YAPLParser.OBJECTID:
                self.state = 31
                self.feature()
                self.state = 32
                self.match(YAPLParser.T__0)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(YAPLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(YAPLParser.OBJECTID, 0)
        def TYPEID(self):
            return self.getToken(YAPLParser.TYPEID, 0)
        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)


    class PropertyContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(YAPLParser.OBJECTID, 0)
        def TYPEID(self):
            return self.getToken(YAPLParser.TYPEID, 0)
        def ASSIGNMENT(self):
            return self.getToken(YAPLParser.ASSIGNMENT, 0)
        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty" ):
                listener.enterProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty" ):
                listener.exitProperty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProperty" ):
                return visitor.visitProperty(self)
            else:
                return visitor.visitChildren(self)



    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = YAPLParser.MethodContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(YAPLParser.OBJECTID)
                self.state = 42
                self.match(YAPLParser.T__3)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.OBJECTID:
                    self.state = 43
                    self.formal()
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPLParser.T__4:
                        self.state = 44
                        self.match(YAPLParser.T__4)
                        self.state = 45
                        self.formal()
                        self.state = 50
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 53
                self.match(YAPLParser.T__5)
                self.state = 54
                self.match(YAPLParser.T__6)
                self.state = 55
                self.match(YAPLParser.TYPEID)
                self.state = 56
                self.match(YAPLParser.T__1)
                self.state = 57
                self.expression(0)
                self.state = 58
                self.match(YAPLParser.T__2)
                pass

            elif la_ == 2:
                localctx = YAPLParser.PropertyContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(YAPLParser.OBJECTID)
                self.state = 61
                self.match(YAPLParser.T__6)
                self.state = 62
                self.match(YAPLParser.TYPEID)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.ASSIGNMENT:
                    self.state = 63
                    self.match(YAPLParser.ASSIGNMENT)
                    self.state = 64
                    self.expression(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECTID(self):
            return self.getToken(YAPLParser.OBJECTID, 0)

        def TYPEID(self):
            return self.getToken(YAPLParser.TYPEID, 0)

        def ASSIGNMENT(self):
            return self.getToken(YAPLParser.ASSIGNMENT, 0)

        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_decla

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecla" ):
                listener.enterDecla(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecla" ):
                listener.exitDecla(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecla" ):
                return visitor.visitDecla(self)
            else:
                return visitor.visitChildren(self)




    def decla(self):

        localctx = YAPLParser.DeclaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decla)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(YAPLParser.OBJECTID)
            self.state = 70
            self.match(YAPLParser.T__6)
            self.state = 71
            self.match(YAPLParser.TYPEID)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YAPLParser.ASSIGNMENT:
                self.state = 72
                self.match(YAPLParser.ASSIGNMENT)
                self.state = 73
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECTID(self):
            return self.getToken(YAPLParser.OBJECTID, 0)

        def TYPEID(self):
            return self.getToken(YAPLParser.TYPEID, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = YAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(YAPLParser.OBJECTID)
            self.state = 77
            self.match(YAPLParser.T__6)
            self.state = 78
            self.match(YAPLParser.TYPEID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LetInContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(YAPLParser.LET, 0)
        def decla(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.DeclaContext)
            else:
                return self.getTypedRuleContext(YAPLParser.DeclaContext,i)

        def IN(self):
            return self.getToken(YAPLParser.IN, 0)
        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetIn" ):
                listener.enterLetIn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetIn" ):
                listener.exitLetIn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetIn" ):
                return visitor.visitLetIn(self)
            else:
                return visitor.visitChildren(self)


    class MinusContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExpressionContext,i)

        def MINUS(self):
            return self.getToken(YAPLParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinus" ):
                listener.enterMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinus" ):
                listener.exitMinus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinus" ):
                return visitor.visitMinus(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class IsvoidContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(YAPLParser.ISVOID, 0)
        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsvoid" ):
                listener.enterIsvoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsvoid" ):
                listener.exitIsvoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsvoid" ):
                return visitor.visitIsvoid(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(YAPLParser.WHILE, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExpressionContext,i)

        def LOOP(self):
            return self.getToken(YAPLParser.LOOP, 0)
        def POOL(self):
            return self.getToken(YAPLParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class DivisionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExpressionContext,i)

        def DIVISION(self):
            return self.getToken(YAPLParser.DIVISION, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivision" ):
                listener.enterDivision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivision" ):
                listener.exitDivision(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivision" ):
                return visitor.visitDivision(self)
            else:
                return visitor.visitChildren(self)


    class NegativeContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER_NEGATIVE(self):
            return self.getToken(YAPLParser.INTEGER_NEGATIVE, 0)
        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegative" ):
                listener.enterNegative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegative" ):
                listener.exitNegative(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegative" ):
                return visitor.visitNegative(self)
            else:
                return visitor.visitChildren(self)


    class BoolNotContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)
        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolNot" ):
                listener.enterBoolNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolNot" ):
                listener.exitBoolNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolNot" ):
                return visitor.visitBoolNot(self)
            else:
                return visitor.visitChildren(self)


    class LessThanContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExpressionContext,i)

        def LESS_THAN(self):
            return self.getToken(YAPLParser.LESS_THAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessThan" ):
                listener.enterLessThan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessThan" ):
                listener.exitLessThan(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessThan" ):
                return visitor.visitLessThan(self)
            else:
                return visitor.visitChildren(self)


    class BlockContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(YAPLParser.OBJECTID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)
